Setup user/email on git before trying to use git-pile
Signed-off-by: Lucas De Marchi <lucas.demarchi@intel.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,11 @@ jobs:
       with:
         ref: ${{ github.sha }}
 
+    - name: Setup git
+      run: |
+        git config --global user.email "playground-bot@my-domain.com"
+        git config --global user.name "Playground Bot"
+
     - name: Setup pile branches
       uses: git-pile/automation/setup@main
       with:
