Ignore warning about branch name
	hint: Using 'master' as the name for the initial branch. This default branch name
	hint: is subject to change. To configure the initial branch name to use in all
	hint: of your new repositories, which will suppress this warning, call:
	hint:
	hint: 	git config --global init.defaultBranch <name>
	hint:
	hint: Names commonly chosen instead of 'master' are 'main', 'trunk' and
	hint: 'development'. The just-created branch can be renamed via this command:
	hint:
	hint: 	git branch -m <name>

Signed-off-by: Lucas De Marchi <lucas.demarchi@intel.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         git config --global user.email "playground-bot@my-domain.com"
         git config --global user.name "Playground Bot"
+        git config --global init.defaultBranch main
 
     - name: Setup pile branches
       uses: git-pile/automation/setup@main
