tqdm is not needed, wheel is
tqdm is from another project and I got confused.

wheel is required, otherwise pip may fallback to running
./setup.py install, but that doesn't work due to the way
we install the bash completion.

Signed-off-by: Lucas De Marchi <lucas.demarchi@intel.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         ref: tip
     - name: Install git-pile
       run: |
-        pip3 install tqdm
+        pip3 install wheel
         pip3 install git-pile/
 
     - name: Checkout detached pile branch
