--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,16 +14,8 @@ jobs:
         git config --global user.name "Playground Bot"
         git config --global init.defaultBranch main
 
-    - name: Fetch git-pile
-      uses: actions/checkout@v2
-      with:
-        repository: git-pile/git-pile
-        path: git-pile
-        ref: tip
     - name: Install git-pile
-      run: |
-        pip3 install wheel
-        pip3 install git-pile/
+      uses: git-pile/automation/env-setup@main
 
     - name: Checkout detached pile branch
       uses: actions/checkout@v2
