--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
 
     - name: Install git-pile
       uses: git-pile/automation/env-setup@main
+      with:
+        version: "0.96"
 
     - name: Checkout detached pile branch
       uses: actions/checkout@v2
