--- a/.github/workflows/ty-applied.yml
+++ b/.github/workflows/ty-applied.yml
@@ -15,4 +15,4 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
           const { issue: { number: issue_number }, repo: { owner, repo }  } = context;
-          github.issues.createComment({ issue_number, owner, repo, body: 'Thank you, applied!' });
+          github.issues.createComment({ issue_number, owner, repo, body: 'Thank you, applied! Yay!' });
