--- a/.github/workflows/ty-applied.yml
+++ b/.github/workflows/ty-applied.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - name: 'Thank you'
       uses: actions/github-script@0.3.0
-      if: github.event.pull_request.merged == 'true'
+      if: github.event.pull_request.merged == true
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
